classDiagram
    class StockManager {
        +consolidate_files(input_dir: str)
        +search_products(criteria: dict)
        +generate_report(report_type: str)
    }

    class ProductItem {
        +name: str
        +category: str
        +quantity: int
        +unit_price: float
        +total_value: float
        +update_quantity(new_quantity: int)
    }

    class DataConsolidator {
        +load_csv_files(file_paths: list)
        +clean_data()
        +remove_duplicates()
        +merge_datasets()
    }

    class SearchEngine {
        +filter_by_name(name: str)
        +filter_by_category(category: str)
        +filter_by_price_range(min_price: float, max_price: float)
        +filter_by_quantity(min_quantity: int)
    }

    class ReportGenerator {
        +calculate_total_stock_value()
        +count_products_by_category()
        +identify_critical_stock()
        +export_report(format: str)
    }

    class DatabaseManager {
        +connect()
        +insert_data(data: list)
        +query_data(criteria: dict)
        +update_data(product_id: str, data: dict)
    }

    StockManager --> DataConsolidator: uses
    StockManager --> SearchEngine: uses
    StockManager --> ReportGenerator: uses
    StockManager --> DatabaseManager: uses

    DataConsolidator --> ProductItem: creates
    SearchEngine --> ProductItem: filters
    ReportGenerator --> ProductItem: analyzes
    DatabaseManager --> ProductItem: manages
